--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["r"],
+  "ownerNumber": ["6283807449268@s.whatsapp.net"],
+  "ownerName": ["XSar"],
   "botName": "Chitanda Eru Bot",
   "sessionName": "rtwone-md",
   "pathimg": "./media/Chitanda.jpg",
