--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "ownerNumber": ["6283807449268@s.whatsapp.net"],
   "ownerName": ["XSar"],
   "botName": "Chitanda Eru Bot",
-  "sessionName": "rtwone-md",
+  "sessionName": "sof",
   "pathimg": "./media/Chitanda.jpg",
   "gamewaktu": 90,
   "limitCount": 25,
